--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -15,3 +15,5 @@ ssl_enable=NO
 pasv_enable=YES
 pasv_min_port=10000
 pasv_max_port=10100
+pasv_address=REPLACE_WITH_HOSTNAME
+local_root=/var/www/html
